<resources>
    <string name="app_name">AppDevFinalProjct2</string>


    <string-array name="navigation">
        <item>Landing Page</item>
        <item>User Basic Info</item>
        <item>BMI Calculator</item>
        <item>Food stuff </item>
        <item>Workout</item>
    </string-array>

    <!--            Landing Page                 -->
    <string name="insperation">Dont settle </string>
    <string name="speach">Physical health is the cornerstone of a fulfilling
        and enriched life. It embodies the art of nurturing our bodies and minds, empowering
        us to conquer life\'s challenges with vigor and determination.
        Just as a well-tuned instrument produces mesmerizing melodies,
        a well-maintained body opens the doors to boundless opportunities. Our bodies are remarkable
        vessels, intricately woven to withstand the tests of time.
        Embracing physical health is not merely about chasing an elusive aesthetic;
        it is a profound commitment to self-care and self-respect.

    </string>

    <!-- Log in and register page    -->
    <string name="loginAppName">The best App</string>

    <string name="getEmail">Enter your email</string>
    <string name="fakeEmail">JhonDoe@Hotmail.com</string>

    <string name="getPassword">Enter your password</string>
    <string name="fakePass">carrotSauce</string>

    <string name="getName">Enter your name</string>
    <string name="fakeName">jhon doe</string>


    <!--    Food Stuff -->
    <string name="recipe">lets get you a yummy VEGETARIAN meal!</string>
    <string name="chef">chef it up!</string>
    <string name="restrictions">Dou have dietary restirctions?</string>
    <string name="vegetarinan">Vegetarian</string>

    <string name="style">Any Country\'s Style of cookies?</string>
    <string name="country">Mexican</string>

    <!--        ingredients-->
    <string name="ingredients">What ingredients do you want to use?</string>
    <string name="ingredient1">Carrots</string>
    <string name="ingredient2">Butter</string>
    <string name="ingredient3">Noodles</string>
    <string name="ingredient4">Cellery</string>


    <!--            Basic User Info                 -->
    <string name="details">Give me your Deets </string>
    <string name="enterName">Enter Your Name</string>
    <string name="enterEmail">Enter Your Email</string>
    <string name="getDob">Enter your age (23)</string>
    <string name="putonweight">Put On Weight</string>
    <string name="takeweightoff">Take Weight Off</string>

    <string name="hieghtinfeet">Enter your height in feet (6\' 1) </string>
    <string name="hight_hint">6 \' 1</string>

    <string name="weightinlbs">Enter your weight in lbs(170) </string>
    <string name="weigt_lable">190</string>

    <!-- Imperial to Metric converter    -->
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>


    <string name="nightMode">Night Mode</string>
    <string name="dayMode">Day Mode</string>

    <!--            User BMI        -->
    <string name="letsGetBMi">Lets get your BMI</string>
    <string name="calcWeight">Calculate daily cals</string>

    <string name="weight_change_week">Weeks </string>
    <string name="weight_change_timeframe">10</string>
    <string name="weight_change_amount">lbs </string>
    <string name="weight_change_weight">25</string>


    <!--    work out area BULK-->


    <!--   OLD CODE idk if used any where so not gona remore  -->


    <!--            Work Out Card body area        -->
    <string-array name="workout_body_parts">
        <item>Arms Of Steel</item>
    </string-array>


    <!--            Work Out Card subtext        -->
    <string-array name="workout_subtext">
        <item>Killer workout to create well defined abdominals </item>

    </string-array>
    <string name="title_activity_chest_and_arms">ChestAndArms</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>