<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User_BasicInfo">


    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/putonweight"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="405dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="103dp"
        android:layout_height="25dp"
        android:text="@string/nightMode"
        tools:layout_editor_absoluteX="212dp"
        tools:layout_editor_absoluteY="463dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/takeweightoff"
        tools:layout_editor_absoluteX="212dp"
        tools:layout_editor_absoluteY="405dp" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dayMode"
        tools:layout_editor_absoluteX="76dp"
        tools:layout_editor_absoluteY="463dp" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="349dp"
        android:layout_height="168dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="168dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enterName"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enterEmail"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextNumber3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/getDob"
            android:inputType="number" />

    </LinearLayout>

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="258dp"
        android:layout_height="75dp"
        android:entries="@array/navigation"
        tools:layout_editor_absoluteX="76dp"
        tools:layout_editor_absoluteY="28dp" />
</androidx.constraintlayout.widget.ConstraintLayout>